<resources>
    <string name="app_name">RUPizza</string>
    <string name="pizza_name_build_your_own">Build Your Own</string>
    <string name="pizza_name_deluxe_pizza">Deluxe Pizza</string>
    <string name="pizza_name_bbq_chicken_pizza">BBQ Chicken Pizza</string>
    <string name="pizza_name_meatzza_pizza">Meatzza Pizza</string>
    <string name="title_pizza_selected">Pizza Selected:</string>
    <string name="placeholder_pizza_selected">Pizza</string>
    <string name="selection_crust_style">Select Pizza Crust Style</string>
    <string name="selection_pizza_size">Select Pizza Size</string>
    <string name="title_toppings">Toppings</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_add_to_order">Add To Order</string>
    <string name="subtotal">Subtotal</string>
    <string name="salestax">SalesTax</string>
    <string name="ordertotal">Order Total</string>
    <string name="bt_clear">CLEAR</string>
    <string name="bt_placeorder">PLACE ORDER</string>
    <string name="bt_cancelOrder">CANCEL ORDER</string>
    <string name="cartTitle">Cart</string>
    <string name="placeOrderTitle">Placed Order</string>
    <string name="orderNumLabel">Order# </string>
    <string name="topping_name">Topping_name</string>


    <string-array name="crust">
        <item>Chicago</item>
        <item>New York</item>
    </string-array>

    <string-array name="size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="toppings">
        <item>Bacon</item>
        <item>BBQ Chicken</item>
        <item>Beef</item>
        <item>Cheddar</item>
        <item>Garlic</item>
        <item>Green Pepper</item>
        <item>Ham</item>
        <item>Mushroom</item>
        <item>Onion</item>
        <item>Pepperoni</item>
        <item>Pineapple</item>
        <item>Provolone</item>
        <item>Sausage</item>
    </string-array>


</resources>